{
    "name": "GameControls",
    "maps": [
        {
            "name": "Default",
            "id": "3e61dc1e-53b0-41ec-a3d2-e5a8c94ff382",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "45e70c34-93c4-498c-873f-aa9df63f83c3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "2d70d1b4-08db-45d8-8402-3333a02cd6fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "d93695eb-eca0-4866-b97c-2a44e7c5de39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "51d9c96b-66e6-4b5d-9642-9ff207da21b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchMouse",
                    "type": "Button",
                    "id": "b3475be9-ea2d-4bcb-ad16-bedccba59ccf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Carry",
                    "type": "Button",
                    "id": "a692c764-16fc-4aec-90f9-74574747d506",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "94595c27-4158-4eb3-a6f0-68111b8262db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Terraform",
                    "type": "Button",
                    "id": "a4c8d95c-dc3e-470b-a473-f2ac218181b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flatten",
                    "type": "Button",
                    "id": "1e911400-0174-4bb5-abe1-b9e6412ddce2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapTerraform",
                    "type": "Button",
                    "id": "247638b8-4da2-4b11-a185-629e8ae99292",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "3d023980-58f3-4463-b369-561eb643dd15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "3380a74c-9da4-4216-98ab-47c05bc10be4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseAll",
                    "type": "Button",
                    "id": "ac5732b4-8872-4e2b-8c72-852a97dd0581",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "cef91dd5-7ac8-4521-b4ee-44a4763e8e35",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c684de7a-48da-4fec-bf99-a65898d5a2e9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "25356ffa-bb46-40e0-83cd-338b2f9803cc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a6acba08-ad9e-46d0-97c3-48761cdd12de",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ed5ff871-53a4-4c76-972c-773f893ac317",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "74810014-cfb6-4036-a516-5ba8d6694695",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bea626d-a074-4063-ba12-efdcda77fa79",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8fa5db6-bef5-4f3c-964a-7b7d7792606a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa6cc3fd-9904-4302-a931-f3f686c63c6a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa4a3214-d7c6-43d2-af39-1bef3ca26955",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Carry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b15700a6-c2a0-4988-8819-ad7cc1376e25",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "864a0d92-742c-4679-9e45-319bdaa6b778",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Terraform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "061e0d6b-cf6b-46a2-beaf-98e39066325c",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flatten",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f43fd454-b03c-4d8d-880a-ddeb95d9f752",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapTerraform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2d48d17-6639-4f9f-a033-8ca09fdfff1e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b140229f-c214-4060-8009-3bbe6f586276",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbc8a5fd-18bf-44b7-945d-c673fe53254d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}